--- a/index.html
+++ b/index.html
@@ -11,41 +11,62 @@
         <h1>Ramen To Go</h1>
     </header>
     <main>
-         <section>
+        <section>
             <h2>¡El mejor ramen, listo para llevar!</h2>
             <h3>¿Antojo de algo picante, delicioso y rápido? ¡Tenemos justo lo que necesitas!</h3>
             <h4>Disfruta de nuestros deliciosos sabores de ramen con el servicio de <strong>Ordene y Recoja</strong>. Perfecto para esos días en los que necesitas una explosión de sabor.</h4>
         </section>
-        <section>
-            <h2>¡Prueba nuestros sabores!</h2>
-            <div class="menu">
-                <div class="item">
-                    <img src="raen-super-picante.jpeg" alt="Ramen Súper Picante">
-                    <h3>Ramen Súper Picante</h3>
-                    <p>🔥 Para los amantes del picante extremo.</p>
-                    <p><strong>Precio: $65</strong></p>
+        
+        <!-- Pestañas -->
+        <section class="tabs">
+            <div class="tab-links">
+                <button class="tab-button active" data-tab="ramen">Ramen</button>
+                <button class="tab-button" data-tab="toppings">Toppings</button>
+            </div>
+            <div class="tab-content">
+                <div class="tab-pane active" id="ramen">
+                    <h2>¡Prueba nuestros sabores!</h2>
+                    <div class="menu">
+                        <div class="item">
+                            <img src="raen-super-picante.jpeg" alt="Ramen Súper Picante">
+                            <h3>Ramen Súper Picante</h3>
+                            <p>🔥 Para los amantes del picante extremo.</p>
+                            <p><strong>Precio: $65</strong></p>
+                        </div>
+                        <div class="item">
+                            <img src="ramen-picante.jpeg" alt="Ramen Picor Medio">
+                            <h3>Ramen Carbonara Picante</h3>
+                            <p>🧀 Cremoso, cálido y lleno de sabor.</p>
+                            <p><strong>Precio: $65</strong></p>
+                        </div>
+                        <div class="item">
+                            <img src="frijol-dulce.jpg" alt="Ramen de Queso">
+                            <h3>Ramen de Beans</h3>
+                            <p>🤩 El equilibrio perfecto de sabor.</p>
+                            <p><strong>Precio: $65</strong></p>
+                        </div>
+                        <div class="item">
+                            <img src="buldak-bag.jpeg" alt="Bolsas de Buldak">
+                            <h3>Bolsas de Buldak</h3>
+                            <p>✨ Llévatelo a casa y prepáralo como quieras.</p>
+                            <p><strong>Precio: $50</strong></p>
+                        </div>
+                    </div>
                 </div>
-                <div class="item">
-                    <img src="ramen-picante.jpeg" alt="Ramen Picor Medio">
-                    <h3>Ramen Carbonara Picante</h3>
-                     <p>🧀 Cremoso, cálido y lleno de sabor.</p>
-                    <p><strong>Precio: $65</strong></p>
-                </div>
-                <div class="item">
-                    <img src="frijol-dulce.jpg" alt="Ramen de Queso">
-                    <h3>Ramen de Beans</h3>
-                    <p>🤩El equilibrio perfecto de sabor.</p>
-                    <p><strong>Precio: $65</strong></p>
-                </div>
-                <div class="item">
-                    <img src="buldak-bag.jpeg" alt="Bolsas de Buldak">
-                    <h3>Bolsas de Buldak</h3>
-                    <p>✨ Llévatelo a casa y prepáralo como quieras.</p>
-                    <p><strong>Precio: $50</strong></p>
+                <div class="tab-pane" id="toppings">
+                    <h2>Toppings para tu ramen</h2>
+                    <ul>
+                        <li>🥚 Huevo cocido - $10</li>
+                        <li>🍖 Carne de cerdo - $15</li>
+                        <li>🍄 Setas Shiitake - $12</li>
+                        <li>🥢 Algas Nori - $8</li>
+                        <li>🌶️ Chile picante - $5</li>
+                    </ul>
                 </div>
             </div>
         </section>
-       <section class="cta-section">
+
+        <section class="cta-section">
             <h2>¡No te quedes con el antojo!</h2>
             <h4>Haz tu pedido ahora y disfruta del mejor ramen de la ciudad. 🍜 Perfecto para llevar o compartir con tus amigos y familia.</h4>
             <h3>Haz clic en el botón para contactarnos por WhatsApp:</h3>
@@ -55,9 +76,32 @@
         </section>
     </main>
     <footer>
-         <p>© 2025 Ramen To Go. Todos los derechos reservados.</p>
+        <p>© 2025 Ramen To Go. Todos los derechos reservados.</p>
         <p><strong>Propiedad de Gil-Sclop</strong></p>
         <img src="gilsclop.png" class="imagen">
     </footer>
+
+    <script>
+        // Script para manejar el cambio de pestañas
+        const tabButtons = document.querySelectorAll('.tab-button');
+        const tabContents = document.querySelectorAll('.tab-pane');
+
+        tabButtons.forEach(button => {
+            button.addEventListener('click', () => {
+                const target = button.dataset.tab;
+
+                tabButtons.forEach(btn => btn.classList.remove('active'));
+                button.classList.add('active');
+
+                tabContents.forEach(content => {
+                    if (content.id === target) {
+                        content.classList.add('active');
+                    } else {
+                        content.classList.remove('active');
+                    }
+                });
+            });
+        });
+    </script>
 </body>
 </html>
