--- a/index.html
+++ b/index.html
@@ -6,19 +6,32 @@
     <title>RAMEN TO GO</title>
     <link rel="stylesheet" href="styles.css">
     <style>
-        .submenu {
-            display: none;
-            background: #f8f8f8;
-            padding: 10px;
-            border-radius: 5px;
-            margin-top: 5px;
+        .menu {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 20px;
         }
-        .item:hover .submenu {
-            display: block;
+        .item {
+            background: #fff;
+            padding: 15px;
+            border-radius: 10px;
+            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+            text-align: center;
+            width: 250px;
+            position: relative;
+        }
+        .submenu {
+            background: #ffcc00;
+            padding: 10px;
+            border-radius: 8px;
+            margin-top: 10px;
+            font-weight: bold;
+            color: #333;
         }
         .submenu ul {
             list-style: none;
             padding: 0;
+            margin: 0;
         }
         .submenu li {
             margin: 5px 0;
