--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <h2>¡Prueba nuestros sabores!</h2>
             <div class="menu">
                 <div class="item">
-                    <img src="ramen-super-picante.jpeg" alt="Ramen Súper Picante">
+                    <img src="raen-super-picante.jpeg" alt="Ramen Súper Picante">
                     <h3>Ramen Súper Picante</h3>
                     <p>🔥 Para los amantes del picante extremo.</p>
                     <p><strong>Precio: $65</strong></p>
@@ -88,8 +88,33 @@
                         </ul>
                     </div>
                 </div>
+                  </div>
+                <div class="item">
+                    <img src="frijol-dulce.jpg" alt="Ramen de Queso">
+                    <h3>Ramen de Beans</h3>
+                    <p>🤩El equilibrio perfecto de sabor.</p>
+                    <p><strong>Precio: $65</strong></p>
+                </div>
+                <div class="item">
+                    <img src="buldak-bag.jpeg" alt="Bolsas de Buldak">
+                    <h3>Bolsas de Buldak</h3>
+                    <p>✨ Llévatelo a casa y prepáralo como quieras.</p>
+                    <p><strong>Precio: $50</strong></p>
+                </div>
+                
             </div>
         </section>
+          </section>
+       <section class="cta-section">
+            <h2>¡No te quedes con el antojo!</h2>
+            <h4>Haz tu pedido ahora y disfruta del mejor ramen de la ciudad. 🍜 Perfecto para llevar o compartir con tus amigos y familia.</h4>
+            <h3>Haz clic en el botón para contactarnos por WhatsApp:</h3>
+            <a href="https://wa.me/526624098029?text=Hola,%20quiero%20realizar%20un%20pedido%20de%20ramen." 
+                target="_blank" class="whatsapp-button">
+                <img src="whatsapp-icon.png" alt="WhatsApp" /> Pedir por WhatsApp
+            </a>
+        </section>
+        
     </main>
     <footer>
         <p>© 2025 Ramen To Go. Todos los derechos reservados.</p>
