--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
                     </div>
                 </div>
                 <div class="item">
-                    <img src="frijol-dulce.jpg" alt="Ramen de Frijol Dulce">
-                    <h3>Ramen de Frijol Dulce</h3>
-                    <p>🤩 El equilibrio perfecto de sabor.</p>
+                   <img src="frijol-dulce.jpg" alt="Ramen de Queso">
+                    <h3>Ramen de Beans</h3>
+                    <p>🤩El equilibrio perfecto de sabor.</p>
                     <p><strong>Precio: $65</strong></p>
                     <div class="submenu">
                         <h4>Toppings disponibles:</h4>
