--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
         <h1>Ramen To Go</h1>
     </header>
     <main>
+         <section>
+            <h2>¡El mejor ramen, listo para llevar!</h2>
+            <h3>¿Antojo de algo picante, delicioso y rápido? ¡Tenemos justo lo que necesitas!</h3>
+            <h4>Disfruta de nuestros deliciosos sabores de ramen con el servicio de <strong>Ordene y Recoja</strong>. Perfecto para esos días en los que necesitas una explosión de sabor.</h4>
+        </section>
         <section>
             <h2>¡Prueba nuestros sabores!</h2>
             <div class="menu">
