--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
                     <div class="submenu">
                         <h4>Toppings disponibles:</h4>
                         <ul>
-                            <li>Huevo +$10</li>
-                            <li>Tofu +$15</li>
-                            <li>Chiles Extras +$5</li>
+                            <li>Huevo +$5</li>
+                            <li>Salchicha de Res +$10</li>
+                            <li>Alga Nori +$0</li>
                         </ul>
                     </div>
                 </div>
@@ -42,9 +42,9 @@
                     <div class="submenu">
                         <h4>Toppings disponibles:</h4>
                         <ul>
-                            <li>Huevo +$10</li>
-                            <li>Queso Extra +$12</li>
-                            <li>Alga Nori +$8</li>
+                            <li>Huevo +$5</li>
+                            <li>Queso Extra +$10</li>
+                            <li>Salchica de Res +$10</li>
                         </ul>
                     </div>
                 </div>
@@ -56,9 +56,9 @@
                     <div class="submenu">
                         <h4>Toppings disponibles:</h4>
                         <ul>
-                            <li>Huevo +$10</li>
-                            <li>Brotes de Soya +$7</li>
-                            <li>Tofu +$15</li>
+                            <li>Huevo +$5</li>
+                            <li>saksa de soya +$5</li>
+                            <li>Salchicha de Res +$10</li>
                         </ul>
                     </div>
                 </div>
@@ -67,6 +67,14 @@
                     <h3>Bolsas de Buldak</h3>
                     <p>✨ Llévatelo a casa y prepáralo como quieras.</p>
                     <p><strong>Precio: $50</strong></p>
+                     <div class="submenu">
+                        <h4>Toppings disponibles:</h4>
+                        <ul>
+                            <li>Buldak Picante</li>
+                            <li>Carbonara Picante</li>
+                            <li>Frijol Dulce</li>
+                        </ul>
+                    </div>
                 </div>
                   </div>
 
