--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         <h4>Toppings disponibles:</h4>
                         <ul>
                             <li>Huevo +$5</li>
-                            <li>saksa de soya +$5</li>
+                            <li>salsa de soja +$5</li>
                             <li>Salchicha de Res +$10</li>
                         </ul>
                     </div>
