--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     <p>✨ Llévatelo a casa y prepáralo como quieras.</p>
                     <p><strong>Precio: $50</strong></p>
                      <div class="submenu">
-                        <h4>Toppings disponibles:</h4>
+                        <h4>Sabores disponibles:</h4>
                         <ul>
                             <li>Buldak Picante</li>
                             <li>Carbonara Picante</li>
