--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <img src="raen-super-picante.jpeg" alt="Ramen Súper Picante">
                     <h3>Ramen Súper Picante</h3>
                     <h3>🔥🔥🔥</h3>
-                    <p>🔥 Para los amantes del picante extremo.</p>
+                    <p>🔥 Para los amantes del picante.</p>
                     <p><strong>Precio: $65</strong></p>
                     <div class="submenu">
                         <h4>Toppings disponibles:</h4>
