--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
                 </div>
                 <div class="item">
                     <img src="ramen-picante.jpeg" alt="Ramen Carbonara Picante">
-                    <h3>Ramen Carbonara Picante</h3>
+                    <h3>Ramen Carbonara</h3>
+                    <h3>🔥</h3>
                     <p>🧀 Cremoso, cálido y lleno de sabor.</p>
                     <p><strong>Precio: $65</strong></p>
                     <div class="submenu">
@@ -52,6 +53,7 @@
                 <div class="item">
                    <img src="frijol-dulce.jpg" alt="Ramen de Queso">
                     <h3>Ramen de Beans</h3>
+                    <h3></h3>
                     <p>🤩El equilibrio perfecto de sabor.</p>
                     <p><strong>Precio: $65</strong></p>
                     <div class="submenu">
