--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 </div>
                 <div class="item">
                     <img src="buldak-bag.jpeg" alt="Bolsas de Buldak">
-                    <h3>Bolsas de Buldak</h3>
+                    <h3>Bolsas de Buldak Paquetes Individuales</h3>
                     <p>✨ Llévatelo a casa y prepáralo como quieras.</p>
                     <p><strong>Precio: $50</strong></p>
                      <div class="submenu">
