--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </header>
     <main>
          <section>
-            <h2>¡El mejor ramen, listo para llevar!</h2>
+            <h2>¡El mejor <strong>Ramen</strong>, listo para llevar!</h2>
             <h3>¿Antojo de algo picante, delicioso y rápido? ¡Tenemos justo lo que necesitas!</h3>
             <h4>Disfruta de nuestros deliciosos sabores de ramen con el servicio de <strong>Ordene y Recoja</strong>. Perfecto para esos días en los que necesitas una explosión de sabor.</h4>
         </section>
