--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <h3>🌶️🌶️🌶️</h3>
                     <p>🔥 Para los amantes del picante.</p>
                     <p><strong>Precio: $65</strong></p>
-                    <button class="add-to-cart" data-name="Ramen Súper Picante" data-price="65">🛒 Agregar al Carrito</button>
+                    <button class="add-to-cart" data-name="Ramen Súper Picante" data-price="65" data-image="raen-super-picante.jpeg">🛒 Agregar al Carrito</button>
 
                     <div class="submenu">
                         <h4>Toppings disponibles:</h4>
@@ -44,7 +44,7 @@
                     <h3>🌶️</h3>
                     <p>🧀 Cremoso, cálido y lleno de sabor.</p>
                     <p><strong>Precio: $65</strong></p>
-                     <button class="add-to-cart" data-name="Ramen Carbonara" data-price="65">🛒 Agregar al Carrito</button>
+                     <button class="add-to-cart" data-name="Ramen Carbonara" data-price="65" data-image="ramen-picante.jpeg">🛒 Agregar al Carrito</button>
                     <div class="submenu">
                         <h4>Toppings disponibles:</h4>
                         <ul>
@@ -60,7 +60,7 @@
                     <h3>🍜</h3>
                     <p>🤩El equilibrio perfecto de sabor.</p>
                     <p><strong>Precio: $65</strong></p>
-                     <button class="add-to-cart" data-name="Ramen de Beans" data-price="65">🛒 Agregar al Carrito</button>
+                     <button class="add-to-cart" data-name="Ramen de Beans" data-price="65" data-image="frijol-dulce.jpg">🛒 Agregar al Carrito</button>
                     <div class="submenu">
                         <h4>Toppings disponibles:</h4>
                         <ul>
