--- a/cart.html
+++ b/cart.html
@@ -24,6 +24,17 @@
     </main>
     <footer>
         <p>© 2025 Ramen To Go. Todos los derechos reservados.</p>
+        <p><strong>Propiedad de Gil-Sclop</strong></p>
+        <img src="gilsclop.png" class="imagen">
+
+    <!-- Botón de Visitar Página de Facebook -->
+    <a href="https://www.facebook.com/sclop01" target="_blank">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg" alt="Visitar Página de Facebook" width="50">
+    </a>
+    <!-- Botón de Me Gusta en Facebook -->
+    <iframe src="https://www.facebook.com/plugins/like.php?href=https://www.facebook.com/sclop01&width=120&layout=button&action=like&size=small&share=false" 
+            width="120" height="30" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true">
+    </iframe>
     </footer>
 </body>
     <script defer src="cart.js"></script>
