--- a/cart.html
+++ b/cart.html
@@ -8,7 +8,7 @@
     <script defer src="cart.js"></script>
 </head>
 <body>
-    <header>
+    <header>  <!-- Nombre principal -->
         <h1>Carrito de Compras</h1>
        <a href="index.html" class="back-to-menu">⬅ Volver al Menú</a>
     </header>
